style(editor): Change cursor color in editor in dark mode The default cursor color is black, which makes it invisible in dark mode. I changed its color (actually `border-color`) to text color to fix it. BREAKING CHANGE: none Closes #16284

--- a/common/app/routes/Challenges/views/classic/classic.less
+++ b/common/app/routes/Challenges/views/classic/classic.less
@@ -24,6 +24,9 @@
       background-color:#242424;
       color:#ABABAB;
     }
+    &-cursor {
+      border-left-color: @night-text-color;
+    }
     .cm-bracket, .cm-tag {
       color:#5CAFD6;
     }
